Fix map view on small resolutions.

--- a/assets/css/art.css
+++ b/assets/css/art.css
@@ -32,6 +32,7 @@ body { padding-top: 40px; }
 .page { display: none; }
 
 #map-canvas {
+    width: 100%;
     position: absolute;
     left: 0;
 }
